[gd_scene load_steps=25 format=2]

[ext_resource path="res://SFX/Gun-Drop29.wav" type="AudioStream" id=1]
[ext_resource path="res://Player/HUD/HelmetOutline.png" type="Texture" id=2]
[ext_resource path="res://Player/HUD/P1Gun01.png" type="Texture" id=3]
[ext_resource path="res://SFX/Machinegun-Submachinegun-Fire17B.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/HUD/HealthBar.png" type="Texture" id=5]
[ext_resource path="res://Player/1P1.gd" type="Script" id=6]
[ext_resource path="res://Player/HUD/Crosshair1.png" type="Texture" id=7]
[ext_resource path="res://Player/HUD/GunSprites.png" type="Texture" id=8]

[sub_resource type="CapsuleShape" id=1]
height = 0.01

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="Animation" id=3]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Gun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Gun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Shoot"
length = 1.125
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Gun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 0, 0, 1, 2, 3, 4, 1, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "10"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Health:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "100"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Health:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=8]
resource_name = "20"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Health:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "30"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Health:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=10]
resource_name = "40"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Health:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=11]
resource_name = "50"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Health:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=12]
resource_name = "60"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Health:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=13]
resource_name = "70"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Health:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=14]
resource_name = "80"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Health:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=15]
resource_name = "90"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Health:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Health:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="1Player1" type="KinematicBody"]
script = ExtResource( 6 )

[node name="HeadHitbox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.984151, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="HeadHitbox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.333903, -0.39073 )
current = true
fov = 90.0
near = 0.01

[node name="RayCast" type="RayCast" parent="HeadHitbox/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -50 )

[node name="BodyHitbox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="HUD" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Gun" type="Sprite" parent="HUD"]
visible = false
position = Vector2( 1390, 536 )
texture = ExtResource( 3 )
hframes = 6

[node name="GunSwitchable" type="Sprite" parent="HUD"]
position = Vector2( 1606, 708 )
texture = ExtResource( 8 )
hframes = 7
vframes = 4
frame = 21

[node name="Helmet" type="Sprite" parent="HUD"]
modulate = Color( 1, 1, 1, 0.54902 )
scale = Vector2( 2, 1 )
texture = ExtResource( 2 )
offset = Vector2( 480, 540 )

[node name="Health" type="Sprite" parent="HUD"]
position = Vector2( 960, 22 )
rotation = 1.5708
scale = Vector2( 1, 2 )
texture = ExtResource( 5 )
hframes = 10

[node name="AnimationPlayerGun" type="AnimationPlayer" parent="HUD"]
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Shoot = SubResource( 5 )

[node name="AnimationPlayerHealth" type="AnimationPlayer" parent="HUD"]
anims/10 = SubResource( 6 )
anims/100 = SubResource( 7 )
anims/20 = SubResource( 8 )
anims/30 = SubResource( 9 )
anims/40 = SubResource( 10 )
anims/50 = SubResource( 11 )
anims/60 = SubResource( 12 )
anims/70 = SubResource( 13 )
anims/80 = SubResource( 14 )
anims/90 = SubResource( 15 )
anims/RESET = SubResource( 16 )

[node name="ShootSound" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource( 4 )

[node name="ReloadSound" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource( 1 )
volume_db = -5.244

[node name="Crosshair" type="Sprite" parent="HUD"]
position = Vector2( 960, 540 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )
hframes = 3
